src/ParWiadrexLang.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParWiadrexLang.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListInit                                (4)
	ListInit -> Init                                   (5)
	ListInit -> Init ListInit                          (6)
	Arg -> Ident ':' Type                              (7)
	Arg -> 'var' Ident ':' Type                        (8)
	ListArg ->                                         (9)
	ListArg -> Arg                                     (10)
	ListArg -> Arg ',' ListArg                         (11)
	Init -> 'fun' Ident '(' ListArg ')' ':' Type Block   (12)
	Init -> 'var' Ident ':' Type '=' Expr ';'          (13)
	Block -> '{' ListStmt '}'                          (14)
	Stmt -> ';'                                        (15)
	Stmt -> Block                                      (16)
	Stmt -> Init                                       (17)
	Stmt -> Ident '=' Expr ';'                         (18)
	Stmt -> Ident '++' ';'                             (19)
	Stmt -> Ident '--' ';'                             (20)
	Stmt -> 'return' Expr ';'                          (21)
	Stmt -> 'return' ';'                               (22)
	Stmt -> 'if' '(' Expr ')' Block                    (23)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (24)
	Stmt -> 'while' '(' Expr ')' Block                 (25)
	Stmt -> Expr ';'                                   (26)
	ListStmt ->                                        (27)
	ListStmt -> Stmt ListStmt                          (28)
	Type -> 'Int'                                      (29)
	Type -> 'String'                                   (30)
	Type -> 'Bool'                                     (31)
	Type -> 'Void'                                     (32)
	Type -> Ident                                      (33)
	Type -> '(' ListType ')' '->' Type                 (34)
	ListType ->                                        (35)
	ListType -> Type                                   (36)
	ListType -> Type ',' ListType                      (37)
	Expr6 -> Ident                                     (38)
	Expr6 -> Integer                                   (39)
	Expr6 -> 'True'                                    (40)
	Expr6 -> 'False'                                   (41)
	Expr6 -> Ident '(' ListExpr ')'                    (42)
	Expr6 -> String                                    (43)
	Expr6 -> '(' Expr ')'                              (44)
	Expr5 -> '-' Expr6                                 (45)
	Expr5 -> '!' Expr6                                 (46)
	Expr5 -> Expr6                                     (47)
	Expr4 -> Expr4 MulOp Expr5                         (48)
	Expr4 -> Expr5                                     (49)
	Expr3 -> Expr3 AddOp Expr4                         (50)
	Expr3 -> Expr4                                     (51)
	Expr2 -> Expr2 RelOp Expr3                         (52)
	Expr2 -> Expr3                                     (53)
	Expr1 -> Expr2 '&&' Expr1                          (54)
	Expr1 -> Expr2                                     (55)
	Expr -> Expr1 '||' Expr                            (56)
	Expr -> 'new' Ident '(' ListExpr ')'               (57)
	Expr -> 'lambda' '(' ListArg ')' '=>' Block        (58)
	Expr -> Expr1                                      (59)
	ListExpr ->                                        (60)
	ListExpr -> Expr                                   (61)
	ListExpr -> Expr ',' ListExpr                      (62)
	AddOp -> '+'                                       (63)
	AddOp -> '-'                                       (64)
	MulOp -> '*'                                       (65)
	MulOp -> '/'                                       (66)
	MulOp -> '%'                                       (67)
	RelOp -> '<'                                       (68)
	RelOp -> '<='                                      (69)
	RelOp -> '>'                                       (70)
	RelOp -> '>='                                      (71)
	RelOp -> '=='                                      (72)
	RelOp -> '!='                                      (73)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'->'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'=>'           { PT _ (TS _ 21) }
	'>'            { PT _ (TS _ 22) }
	'>='           { PT _ (TS _ 23) }
	'Bool'         { PT _ (TS _ 24) }
	'False'        { PT _ (TS _ 25) }
	'Int'          { PT _ (TS _ 26) }
	'String'       { PT _ (TS _ 27) }
	'True'         { PT _ (TS _ 28) }
	'Void'         { PT _ (TS _ 29) }
	'else'         { PT _ (TS _ 30) }
	'fun'          { PT _ (TS _ 31) }
	'if'           { PT _ (TS _ 32) }
	'lambda'       { PT _ (TS _ 33) }
	'new'          { PT _ (TS _ 34) }
	'return'       { PT _ (TS _ 35) }
	'var'          { PT _ (TS _ 36) }
	'while'        { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'||'           { PT _ (TS _ 39) }
	'}'            { PT _ (TS _ 40) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	ListInit        rules 5, 6
	Arg             rules 7, 8
	ListArg         rules 9, 10, 11
	Init            rules 12, 13
	Block           rule  14
	Stmt            rules 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26
	ListStmt        rules 27, 28
	Type            rules 29, 30, 31, 32, 33, 34
	ListType        rules 35, 36, 37
	Expr6           rules 38, 39, 40, 41, 42, 43, 44
	Expr5           rules 45, 46, 47
	Expr4           rules 48, 49
	Expr3           rules 50, 51
	Expr2           rules 52, 53
	Expr1           rules 54, 55
	Expr            rules 56, 57, 58, 59
	ListExpr        rules 60, 61, 62
	AddOp           rules 63, 64
	MulOp           rules 65, 66, 67
	RelOp           rules 68, 69, 70, 71, 72, 73

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'fun'          shift, and enter state 6
	'var'          shift, and enter state 7

	Program        goto state 3
	ListInit       goto state 4
	Init           goto state 5

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	Program -> ListInit .                               (rule 4)

	%eof           reduce using rule 4


State 5

	ListInit -> Init .                                  (rule 5)
	ListInit -> Init . ListInit                         (rule 6)

	'fun'          shift, and enter state 6
	'var'          shift, and enter state 7
	%eof           reduce using rule 5

	ListInit       goto state 10
	Init           goto state 5

State 6

	Init -> 'fun' . Ident '(' ListArg ')' ':' Type Block    (rule 12)

	L_Ident        shift, and enter state 2

	Ident          goto state 9

State 7

	Init -> 'var' . Ident ':' Type '=' Expr ';'         (rule 13)

	L_Ident        shift, and enter state 2

	Ident          goto state 8

State 8

	Init -> 'var' Ident . ':' Type '=' Expr ';'         (rule 13)

	':'            shift, and enter state 12


State 9

	Init -> 'fun' Ident . '(' ListArg ')' ':' Type Block    (rule 12)

	'('            shift, and enter state 11


State 10

	ListInit -> Init ListInit .                         (rule 6)

	%eof           reduce using rule 6


State 11

	Init -> 'fun' Ident '(' . ListArg ')' ':' Type Block    (rule 12)

	')'            reduce using rule 9
	'var'          shift, and enter state 23
	L_Ident        shift, and enter state 2

	Ident          goto state 20
	Arg            goto state 21
	ListArg        goto state 22

State 12

	Init -> 'var' Ident ':' . Type '=' Expr ';'         (rule 13)

	'('            shift, and enter state 15
	'Bool'         shift, and enter state 16
	'Int'          shift, and enter state 17
	'String'       shift, and enter state 18
	'Void'         shift, and enter state 19
	L_Ident        shift, and enter state 2

	Ident          goto state 13
	Type           goto state 14

State 13

	Type -> Ident .                                     (rule 33)

	')'            reduce using rule 33
	','            reduce using rule 33
	'='            reduce using rule 33
	'{'            reduce using rule 33


State 14

	Init -> 'var' Ident ':' Type . '=' Expr ';'         (rule 13)

	'='            shift, and enter state 30


State 15

	Type -> '(' . ListType ')' '->' Type                (rule 34)

	'('            shift, and enter state 15
	')'            reduce using rule 35
	'Bool'         shift, and enter state 16
	'Int'          shift, and enter state 17
	'String'       shift, and enter state 18
	'Void'         shift, and enter state 19
	L_Ident        shift, and enter state 2

	Ident          goto state 13
	Type           goto state 28
	ListType       goto state 29

State 16

	Type -> 'Bool' .                                    (rule 31)

	')'            reduce using rule 31
	','            reduce using rule 31
	'='            reduce using rule 31
	'{'            reduce using rule 31


State 17

	Type -> 'Int' .                                     (rule 29)

	')'            reduce using rule 29
	','            reduce using rule 29
	'='            reduce using rule 29
	'{'            reduce using rule 29


State 18

	Type -> 'String' .                                  (rule 30)

	')'            reduce using rule 30
	','            reduce using rule 30
	'='            reduce using rule 30
	'{'            reduce using rule 30


State 19

	Type -> 'Void' .                                    (rule 32)

	')'            reduce using rule 32
	','            reduce using rule 32
	'='            reduce using rule 32
	'{'            reduce using rule 32


State 20

	Arg -> Ident . ':' Type                             (rule 7)

	':'            shift, and enter state 27


State 21

	ListArg -> Arg .                                    (rule 10)
	ListArg -> Arg . ',' ListArg                        (rule 11)

	')'            reduce using rule 10
	','            shift, and enter state 26


State 22

	Init -> 'fun' Ident '(' ListArg . ')' ':' Type Block    (rule 12)

	')'            shift, and enter state 25


State 23

	Arg -> 'var' . Ident ':' Type                       (rule 8)

	L_Ident        shift, and enter state 2

	Ident          goto state 24

State 24

	Arg -> 'var' Ident . ':' Type                       (rule 8)

	':'            shift, and enter state 55


State 25

	Init -> 'fun' Ident '(' ListArg ')' . ':' Type Block    (rule 12)

	':'            shift, and enter state 54


State 26

	ListArg -> Arg ',' . ListArg                        (rule 11)

	')'            reduce using rule 9
	'var'          shift, and enter state 23
	L_Ident        shift, and enter state 2

	Ident          goto state 20
	Arg            goto state 21
	ListArg        goto state 53

State 27

	Arg -> Ident ':' . Type                             (rule 7)

	'('            shift, and enter state 15
	'Bool'         shift, and enter state 16
	'Int'          shift, and enter state 17
	'String'       shift, and enter state 18
	'Void'         shift, and enter state 19
	L_Ident        shift, and enter state 2

	Ident          goto state 13
	Type           goto state 52

State 28

	ListType -> Type .                                  (rule 36)
	ListType -> Type . ',' ListType                     (rule 37)

	')'            reduce using rule 36
	','            shift, and enter state 51


State 29

	Type -> '(' ListType . ')' '->' Type                (rule 34)

	')'            shift, and enter state 50


State 30

	Init -> 'var' Ident ':' Type '=' . Expr ';'         (rule 13)

	'!'            shift, and enter state 41
	'('            shift, and enter state 42
	'-'            shift, and enter state 43
	'False'        shift, and enter state 44
	'True'         shift, and enter state 45
	'lambda'       shift, and enter state 46
	'new'          shift, and enter state 47
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 48
	L_quoted       shift, and enter state 49

	Ident          goto state 31
	Integer        goto state 32
	String         goto state 33
	Expr6          goto state 34
	Expr5          goto state 35
	Expr4          goto state 36
	Expr3          goto state 37
	Expr2          goto state 38
	Expr1          goto state 39
	Expr           goto state 40

State 31

	Expr6 -> Ident .                                    (rule 38)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 42)

	'!='           reduce using rule 38
	'%'            reduce using rule 38
	'&&'           reduce using rule 38
	'('            shift, and enter state 82
	')'            reduce using rule 38
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	','            reduce using rule 38
	'-'            reduce using rule 38
	'/'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'||'           reduce using rule 38


State 32

	Expr6 -> Integer .                                  (rule 39)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'||'           reduce using rule 39


State 33

	Expr6 -> String .                                   (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'||'           reduce using rule 43


State 34

	Expr5 -> Expr6 .                                    (rule 47)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'||'           reduce using rule 47


State 35

	Expr4 -> Expr5 .                                    (rule 49)

	'!='           reduce using rule 49
	'%'            reduce using rule 49
	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'||'           reduce using rule 49


State 36

	Expr4 -> Expr4 . MulOp Expr5                        (rule 48)
	Expr3 -> Expr4 .                                    (rule 51)

	'!='           reduce using rule 51
	'%'            shift, and enter state 79
	'&&'           reduce using rule 51
	')'            reduce using rule 51
	'*'            shift, and enter state 80
	'+'            reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            shift, and enter state 81
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'||'           reduce using rule 51

	MulOp          goto state 78

State 37

	Expr3 -> Expr3 . AddOp Expr4                        (rule 50)
	Expr2 -> Expr3 .                                    (rule 53)
